# Systemy-Business-Inteligence---Mini-projekt

./: .env.example  .gitignore  README.md  WPLATY.md  create_database.sh  docker-compose.yml  gen_weather.py  increment_star_pipeline.py  justfile  make_sample.py  migrate.py  pipeline.py  pyproject.toml  star_pipeline.py
Taxi/: Taxi.slnx
Taxi/Taxi/: Dim Category.dim  Dim Date.dim  Dim Payment Type.dim  Dim Time.dim  Dim Vendor.dim  Dim Weather.dim  Dim Zone.dim  FOXFATELAPTOP.ds  Taxi Cube.cube  Taxi Cube.partitions  Taxi Star 1.dsv  Taxi Star.dsv  Taxi.database  Taxi.dwproj
data/lookup/: paymenttype.csv  ratecodeid.csv  vendorid.csv
