[project]
name = "etl-projekt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dlt[postgres]>=1.27.2",
    "duckdb>=1.5.3",
    "enlighten>=1.14.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]
